--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
 	<title>keep</title>
 		<!--  Stylesheets -->
     	<link rel='stylesheet' href='css/style.css' type='text/css'>
+    	<link rel='stylesheet' href='css/cabecalho.css' type='text/css'>
+    	<link rel='stylesheet' href='css/opcoesDaPagina.css' type='text/css'>
+
 </head>
 <body>
-	<h1 class="cabecalho container">keep</h1>
+	<header class="cabecalho container">
+	<h1 class="cabecalho-logo">keep</h1>
+	<button id="mudalayout" class="opcoesDaPagina-opcao opcoesDaPagina-botao">linhas</button>
+	</header>
  <section class="container mural">
- 	   <div class="cartao">
- 	    <p class="cartao-conteudo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum obcaecati illo voluptatibus. Iure nihil velit unde magnam pariatur repellat eligendi, deleniti magni quidem atque eveniet sed rerum cupiditate, provident consequuntur!</p>
+ 	   <div class="cartao novo-cartao">
+ 	    <p class="cartao-conteudo">Inserir novo cartão</p>
  	</div>
  	<div class="cartao">
  	    <p class="cartao-conteudo">Eveniet aut dolores vel tempore velit excepturi deserunt magni laborum ipsa repellat quas perferendis omnis, dolorem unde reprehenderit aspernatur totam libero voluptatibus iure, consectetur saepe. Facilis modi quas iusto nemo.</p>
@@ -26,5 +32,6 @@
  	    <p class="cartao-conteudo">Possimus quisquam enim doloribus optio hic illo officia, similique magnam voluptatum blanditiis adipisci tempora iure necessitatibus minus a. Rerum unde, quisquam id quia laborum cum molestias saepe hic optio. Illo.</p>
  	</div>
  </section>
+ <script type="text/javascript" src="js/principal.js"></script>
 </body>
 </html>
