--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     	<link rel="stylesheet" href="css/cartao.css">
         <link rel="stylesheet" href="css/opcoesDoCartao.css">
         <link rel="stylesheet" href="css/novoCartao.css" type="text/css" />
+        <link rel="stylesheet" href="css/mural.css" type="text/css" />
 <!-- endbuild -->
 </head>
 <body>
